--- a/setup.cfg
+++ b/setup.cfg
@@ -3,11 +3,11 @@ description-file = README.rst
 
 [aliases]
 # Define `python setup.py test`
-test=pytest
+test = pytest
 
 [coverage:run]
 branch = True
-source = data-CAT
+source = Data-CAT
 
 [tool:pytest]
 testpaths = tests
