--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ numpy
 pandas
 pyyaml>=5.1
 pymongo
-plams@git+https://github.com/SCM-NV/PLAMS@Minor-changes
-CAT@git+https://github.com/nlesc-nano/CAT@master
+plams@git+https://github.com/SCM-NV/PLAMS@master
+CAT@git+https://github.com/nlesc-nano/CAT@devel
+AssertionLib@git+https://github.com/nlesc-nano/AssertionLib@master
