Fix the PLAMS version to https://github.com/SCM-NV/PLAMS/commit/a5696ce62c09153a9fa67b2b03a750913e1d0924

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ numpy
 pandas
 pyyaml>=5.1
 pymongo
-plams@git+https://github.com/SCM-NV/PLAMS@master
+plams@git+https://github.com/SCM-NV/PLAMS@a5696ce62c09153a9fa67b2b03a750913e1d0924
 CAT@git+https://github.com/nlesc-nano/CAT@devel
 AssertionLib@git+https://github.com/nlesc-nano/AssertionLib@master
