--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,10 @@ branch = True
 source = dataCAT
 
 [tool:pytest]
-testpaths = tests
-addopts = --tb=short --cov --cov-report xml --cov-report term --cov-report html
+testpaths = dataCAT tests
+flake8-max-line-length = 100
+addopts = --tb=short --cache-clear --flake8 --pydocstyle --cov=dataCAT --cov-report xml --cov-report term --cov-report html
+markers = slow: A marker for slow tests.
 
 # Define `python setup.py build_sphinx`
 [build_sphinx]
@@ -19,3 +21,7 @@ source-dir = docs
 build-dir = docs/_build
 all_files = 1
 builder = html
+
+[pydocstyle]
+convention = numpy
+add-ignore = D401
