--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -13,6 +13,7 @@ jobs:
     build:
         name: Python ${{ matrix.version }} on ${{ matrix.os }}
         runs-on: ${{ matrix.os }}
+        continue-on-error: true
         strategy:
             matrix:
                 os: [ubuntu-latest, macos-latest]
