--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -14,6 +14,7 @@ jobs:
         name: Python ${{ matrix.version }} on ${{ matrix.os }}
         runs-on: ${{ matrix.os }}
         strategy:
+            fail-fast: false
             matrix:
                 os: [ubuntu-latest, macos-latest]
                 version: [3.6, 3.7, 3.8]
