Add MongoDB tests

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -37,6 +37,9 @@ jobs:
               env:
                 CONDA_PREFIX: /usr/share/miniconda
 
+            - name: Start MongoDB
+              uses: supercharge/mongodb-github-action@1.3.0
+
             - name: Conda info
               run: conda info
 
