--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -38,7 +38,7 @@ jobs:
                 CONDA_PREFIX: /usr/share/miniconda
 
             - name: Start MongoDB
-              if: ${{ matrix.os }} == ubuntu-latest
+              if: ${{ matrix.os == ubuntu-latest }}
               uses: supercharge/mongodb-github-action@1.3.0
 
             - name: Conda info
