--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -41,6 +41,10 @@ jobs:
               if: matrix.os == 'ubuntu-latest'
               uses: supercharge/mongodb-github-action@1.3.0
 
+            - name: MongDB info
+              if: matrix.os == 'ubuntu-latest'
+              run: mongo --version
+
             - name: Conda info
               run: conda info
 
