--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -37,7 +37,7 @@ jobs:
               env:
                 CONDA_PREFIX: /usr/share/miniconda
 
-            - name: Start MongoDB
+            - name: Install MongoDB
               if: matrix.os == 'ubuntu-latest'
               uses: supercharge/mongodb-github-action@1.3.0
 
@@ -48,7 +48,7 @@ jobs:
             - name: Conda info
               run: conda info
 
-            - name: Installed packages
+            - name: Installed package info
               run: conda list
 
             - name: Run tests
