--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -41,14 +41,14 @@ jobs:
               if: matrix.os == 'ubuntu-latest'
               uses: supercharge/mongodb-github-action@1.3.0
 
-            - name: MongDB info
+            - name: Info MongDB
               if: matrix.os == 'ubuntu-latest'
               run: mongo --version
 
-            - name: Conda info
+            - name: Info conda info
               run: conda info
 
-            - name: Installed package info
+            - name: Info installed packages
               run: conda list
 
             - name: Run tests
