--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -29,7 +29,7 @@ jobs:
                 python-version: ${{ matrix.version }}
                 conda-channels: anaconda
 
-            - name: Install conda-based dependencies
+            - name: Install Conda-based dependencies
               run: conda install -c conda-forge h5py rdkit
 
             - name: Install dependencies
@@ -45,7 +45,7 @@ jobs:
               if: matrix.os == 'ubuntu-latest'
               run: mongo --version
 
-            - name: Info conda info
+            - name: Info Conda
               run: conda info
 
             - name: Info installed packages
