--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -29,7 +29,7 @@ jobs:
                 python-version: ${{ matrix.version }}
                 conda-channels: anaconda
 
-            - name: Install conda-based dependencies
+            - name: Install Conda-based dependencies
               run: conda install -c conda-forge h5py rdkit
 
             - name: Install dependencies
@@ -37,10 +37,18 @@ jobs:
               env:
                 CONDA_PREFIX: /usr/share/miniconda
 
-            - name: Conda info
+            - name: Install MongoDB
+              if: matrix.os == 'ubuntu-latest'
+              uses: supercharge/mongodb-github-action@1.3.0
+
+            - name: Info MongDB
+              if: matrix.os == 'ubuntu-latest'
+              run: mongo --version
+
+            - name: Info Conda
               run: conda info
 
-            - name: Installed packages
+            - name: Info installed packages
               run: conda list
 
             - name: Run tests
