Removed the `--cache-clear` argument

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ source = dataCAT
 [tool:pytest]
 testpaths = dataCAT tests
 flake8-max-line-length = 100
-addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --cache-clear --flake8 --pydocstyle --cov=dataCAT --cov-report xml --cov-report term --cov-report html --doctest-modules --mypy
+addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --flake8 --pydocstyle --cov=dataCAT --cov-report xml --cov-report term --cov-report html --doctest-modules --mypy
 markers = slow: A marker for slow tests.
 
 # Define `python setup.py build_sphinx`
