--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 description-file = README.rst
+license_files = LICENSE.md
 
 [aliases]
 # Define `python setup.py test`
@@ -12,6 +13,7 @@ source = dataCAT
 [tool:pytest]
 testpaths = dataCAT tests
 flake8-max-line-length = 100
+flake8-ignore = N806
 addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --flake8 --pydocstyle --cov=dataCAT --cov-report xml --cov-report term --cov-report html --doctest-modules --mypy
 markers = slow: A marker for slow tests.
 
