--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -52,7 +52,7 @@ jobs:
               run: conda list
 
             - name: Run tests
-              run: pytest -m "not slow"
+              run: pytest -m "not slow" --mypy
               env:
                 CONDA_PREFIX: /usr/share/miniconda
 
