--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ source = dataCAT
 testpaths = dataCAT tests
 flake8-max-line-length = 100
 flake8-ignore = N806
-addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --flake8 --pydocstyle --cov=dataCAT --cov-report xml --cov-report term --cov-report html --doctest-modules --mypy
+addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --flake8 --pydocstyle --cov=dataCAT --cov-report xml --cov-report term --cov-report html --doctest-modules
 markers = slow: A marker for slow tests.
 
 # Define `python setup.py build_sphinx`
