--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ source = dataCAT
 [tool:pytest]
 testpaths = dataCAT tests
 flake8-max-line-length = 100
-flake8-ignore = N806
+flake8-ignore = W504 N806
 addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --flake8 --pydocstyle --cov=dataCAT --cov-report xml --cov-report term --cov-report html --doctest-modules
 markers = slow: A marker for slow tests.
 
