--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -33,7 +33,7 @@ jobs:
               run: conda install -c conda-forge h5py rdkit
 
             - name: Install dependencies
-              run: pip install -e .[test]
+              run: pip install -v -e .[test]
               env:
                 CONDA_PREFIX: /usr/share/miniconda
 
