--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,6 +20,11 @@ jobs:
                 version: [3.6, 3.7, 3.8]
 
         steps:
+            - name: Cancel Previous Runs
+              uses: styfle/cancel-workflow-action@0.6.0
+              with:
+                access_token: ${{ github.token }}
+
             - uses: actions/checkout@v2
 
             - name: Set up Conda with Python ${{ matrix.version }} on ${{ matrix.os }}
