--- a/setup.cfg
+++ b/setup.cfg
@@ -10,11 +10,13 @@ test = pytest
 branch = True
 source = dataCAT
 
+[flake8]
+max-line-length = 100
+ignore = W504 N806
+
 [tool:pytest]
 testpaths = dataCAT tests
-flake8-max-line-length = 100
-flake8-ignore = W504 N806
-addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --flake8 --pydocstyle --cov=dataCAT --cov-report xml --cov-report term --cov-report html --doctest-modules
+addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --cov=dataCAT --cov-report xml --cov-report term --cov-report html --doctest-modules
 markers = slow: A marker for slow tests.
 
 # Define `python setup.py build_sphinx`
