--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,12 +17,12 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest, macos-latest]
-                version: [3.7, 3.8, 3.9]
+                version: ["3.7", "3.8", "3.9", "3.10"]
                 special: [""]
                 include:
                     -   os: ubuntu-latest
                         special: "; pre-release"
-                        version: "3.9"
+                        version: "3.10"
 
         steps:
             -   name: Cancel Previous Runs
@@ -49,7 +49,6 @@ jobs:
                         *)
                             pip install -e .[test] ;;
                     esac
-
 
             -   name: Install MongoDB
                 if: matrix.os == 'ubuntu-latest'
@@ -83,10 +82,10 @@ jobs:
         steps:
             -   uses: actions/checkout@v2
 
-            -   name: Set up Python 3.9 on ubuntu-latest
+            -   name: Set up Python 3.10 on ubuntu-latest
                 uses: actions/setup-python@v2
                 with:
-                    python-version: 3.9
+                    python-version: "3.10"
 
             -   name: Install dependencies
                 run: |
