TST: Use actions/setup-python instead of s-weigand/setup-conda

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -33,18 +33,16 @@ jobs:
 
             -   uses: actions/checkout@v2
 
-            -   name: Setup Conda
-                uses: s-weigand/setup-conda@v1
+            -   name: Set up Python
+                uses: actions/setup-python@v2
                 with:
-                    update-conda: false
+                    python-version: ${{ matrix.version }}
 
             -   name: Install dependencies
                 run: |
-                    conda create -n test -c conda-forge python=${{ matrix.version }} "rdkit>=2021.03.4"
-                    source $CONDA/bin/activate test
                     case "${{ matrix.special }}" in
                         "; pre-release")
-                            pip install -e .[test] --pre --upgrade --force-reinstall
+                            pip install -e .[test] --pre
                             pip install git+https://github.com/SCM-NV/PLAMS@master --upgrade
                             pip install git+https://github.com/SCM-NV/qmflows@master --upgrade
                             pip install git+https://github.com/nlesc-nano/CAT@master --upgrade
@@ -61,18 +59,16 @@ jobs:
                 if: matrix.os == 'ubuntu-latest'
                 run: mongo --version
 
-            -   name: Info Conda
+            -   name: Python info
                 run: |
-                    source $CONDA/bin/activate test
-                    conda info
+                    which python
+                    python --version
 
-            -   name: Info installed packages
-                run: conda list -n test
+            -   name: Installed packages
+                run: pip list
 
             -   name: Run tests
-                run: |
-                    source $CONDA/bin/activate test
-                    pytest -m "not slow"
+                run: pytest -m "not slow"
 
             -   name: Run codecov
                 uses: codecov/codecov-action@v2
