TST: Ignore `np.distutils` deprecation warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,8 @@ ignore = W504 N806
 testpaths = dataCAT tests
 addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --cov=dataCAT --cov-report xml --cov-report term --cov-report html --doctest-modules
 markers = slow: A marker for slow tests.
+filterwarnings =
+    ignore::DeprecationWarning:numpy.distutils.*
 
 # Define `python setup.py build_sphinx`
 [build_sphinx]
