--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,6 +10,10 @@ on:
     pull_request:
     workflow_dispatch:
 
+concurrency:
+    group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+    cancel-in-progress: true
+
 jobs:
     build:
         name: ${{ matrix.os }} (py ${{ matrix.version }}${{ matrix.special }})
@@ -26,15 +30,10 @@ jobs:
                         version: "3.10"
 
         steps:
-            -   name: Cancel Previous Runs
-                uses: styfle/cancel-workflow-action@0.9.1
-                with:
-                    access_token: ${{ github.token }}
-
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
 
             -   name: Set up Python
-                uses: actions/setup-python@v2
+                uses: actions/setup-python@v4
                 with:
                     python-version: ${{ matrix.version }}
 
@@ -53,7 +52,7 @@ jobs:
 
             -   name: Install MongoDB
                 if: matrix.os == 'ubuntu-latest'
-                uses: supercharge/mongodb-github-action@1.7.0
+                uses: supercharge/mongodb-github-action@1.8.0
 
             -   name: Info MongDB
                 if: matrix.os == 'ubuntu-latest'
@@ -71,7 +70,7 @@ jobs:
                 run: pytest -m "not slow"
 
             -   name: Run codecov
-                uses: codecov/codecov-action@v2
+                uses: codecov/codecov-action@v3
                 with:
                     file: ./coverage.xml
                     name: codecov-umbrella
@@ -79,12 +78,12 @@ jobs:
     Linting:
         runs-on: ubuntu-latest
         steps:
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
 
-            -   name: Set up Python 3.10 on ubuntu-latest
-                uses: actions/setup-python@v2
+            -   name: Set up Python on ubuntu-latest
+                uses: actions/setup-python@v4
                 with:
-                    python-version: "3.10"
+                    python-version: '3.x'
 
             -   name: Install dependencies
                 run: |
