--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -22,12 +22,12 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest, macos-latest]
-                version: ["3.7", "3.8", "3.9", "3.10"]
+                version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
                 special: [""]
                 include:
                     -   os: ubuntu-latest
                         special: "; pre-release"
-                        version: "3.10"
+                        version: "3.11"
 
         steps:
             -   uses: actions/checkout@v3
